fix(layout): don’t disable overflow-scroll

--- a/Resources/public/css/table.css
+++ b/Resources/public/css/table.css
@@ -108,10 +108,6 @@
   font-size: 10px;
 }
 
-.whatwedo_table.whatwedo_table__large .table-responsive {
-  overflow-x: scroll;
-}
-
 .whatwedo_table.whatwedo_table__large .table-responsive td {
   white-space: nowrap;
 }
@@ -179,10 +175,6 @@
 
 .whatwedo_table__filters .whatwedo_table__filters_filter .btn-group {
   margin-top: 5px;
-}
-
-.table-responsive {
-  overflow-x: visible;
 }
 
 .dataTable tr[data-href] {
